# INDAI

./: .env  .gitignore  README.md  TODO.md  main.py  pyproject.toml  test_voice.html
backend/: database.py  main.py
backend/agents/: compliance_agent.py  copilot_agent.py  ingestion_agent.py  rca_agent.py
backend/utils/: embeddings.py  ner.py  ocr.py
frontend/: vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AlertsHealth.jsx  ChatInterface.jsx  ComplianceDash.jsx  GraphViewer.jsx  RCADashboard.jsx  Sidebar.jsx  SmartSearch.jsx  UploadPanel.jsx
knowledge_graph/: graph_builder.py  visualize.py
