[project]
name = "plantmind-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.138.0",
    "google-genai>=2.10.0",
    "google-generativeai>=0.8.6",
    "neo4j>=6.2.0",
    "openpyxl>=3.1.5",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "pyvis>=0.3.2",
    "sentence-transformers>=5.6.0",
    "spacy>=3.8.14",
    "uvicorn>=0.49.0",
]
